--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,7 @@ body {
     margin-top: 2rem;
 }
 
-.messege {
+.message {
     animation-name: anim;
     animation-duration: 5s;
     animation-iteration-count: infinite;
