--- a/css/main.css
+++ b/css/main.css
@@ -45,12 +45,20 @@ body {
 }
 
 .btns .btnSubmit {
-    background-color: rgb( 0, 252, 76 );
+    background-color: rgb(6, 169, 55);
 }
 
 .btns .btnCancel {
-    background-color: rgb(209, 43, 14);
+    background-color: rgb(139, 25, 5);
     margin-left: 10px;
+}
+
+.btnSubmit:hover {
+    background-color: rgb(4, 206, 64);
+}
+
+.btnCancel:hover {
+    background-color: rgb(209, 43, 14);
 }
 
 .container__text {
